# public/swagger.json
@@ -1015,7 +1015,7 @@
 		"/generating/generateToAddress": {
 			"post": {
 				"tags": [
-					"control"
+					"generating"
 				],
 				"summary": "Place an order for a pet",
 				"description": "",
@@ -1611,111 +1611,6 @@
 			"get": {
 				"tags": [
 					"network"
-				],
-				"summary": "Place an order for a pet",
-				"description": "",
-				"operationId": "placeOrder",
-				"produces": [
-					"application/json"
-				],
-				"parameters": [
-					{
-						"in": "body",
-						"name": "body",
-						"description": "order placed for purchasing the pet",
-						"required": true,
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "successful operation",
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					},
-					"400": {
-						"description": "Invalid Order"
-					}
-				}
-			}
-		},
-		"/rawtransaction/createRawTransaction": {
-			"get": {
-				"tags": [
-					"rawtransaction"
-				],
-				"summary": "Place an order for a pet",
-				"description": "",
-				"operationId": "placeOrder",
-				"produces": [
-					"application/json"
-				],
-				"parameters": [
-					{
-						"in": "body",
-						"name": "body",
-						"description": "order placed for purchasing the pet",
-						"required": true,
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "successful operation",
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					},
-					"400": {
-						"description": "Invalid Order"
-					}
-				}
-			}
-		},
-		"/rawtransaction/decodeRawTransaction": {
-			"get": {
-				"tags": [
-					"rawtransaction"
-				],
-				"summary": "Place an order for a pet",
-				"description": "",
-				"operationId": "placeOrder",
-				"produces": [
-					"application/json"
-				],
-				"parameters": [
-					{
-						"in": "body",
-						"name": "body",
-						"description": "order placed for purchasing the pet",
-						"required": true,
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "successful operation",
-						"schema": {
-							"$ref": "#/definitions/Order"
-						}
-					},
-					"400": {
-						"description": "Invalid Order"
-					}
-				}
-			}
-		},
-		"/rawtransaction/decodeScript": {
-			"get": {
-				"tags": [
-					"rawtransaction"
 				],
 				"summary": "Place an order for a pet",
 				"description": "",
